--- a/views/cadastroOng.handlebars
+++ b/views/cadastroOng.handlebars
@@ -77,14 +77,22 @@
       <input type="text"  class="form-control " pattern="\d{5}-?\d{3}" name="cep" placeholder="Ex: 0000-000" id="inputCEP">
     </div>
   </div>
+  
 
   <div class="form-row">
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-6">
       <label for="inputCity">Telefone para Contato</label>
       <input type="text" class="form-control" id="inputCity" name="telefoneParaContato" placeholder="Digite um telefone para contato">
     </div>
   </div>
-  
+
+<div class="form-row">
+  <div class="form-group col-md-6">
+    <label for="exampleFormControlTextarea1">Descrição da Ong</label>
+    <textarea class="form-control" name="descricao" id="exampleFormControlTextarea1"  rows="5"></textarea>
+  </div>
+</div> 
+
   <div class="form-group">
     <div class="form-check">
       <input class="form-check-input" type="checkbox"  name="confirmarDados" id="gridCheck">
