--- a/public/css/leonir.css
+++ b/public/css/leonir.css
@@ -32,8 +32,7 @@ body nav div div a {
 }
 
 #tamanhoDaFonte{
-    font-size: 25px;
-   
+    font-size: 25px; 
 }
 
 #atualizarUsuario {
@@ -44,11 +43,44 @@ body nav div div a {
     text-align: center;
 }
 
-.card-img-top {
-    height: 70%;
-    
-}
+
 
 body {
     background-color:#e9ecef;
 }
+
+/* Smaller than standard 960 (devices and browsers) */
+@media only screen and (max-width: 959px) {
+    p{
+        font-size: 10px;
+    }
+}
+
+/* Tablet Portrait size to standard 960 (devices and browsers) */
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+    p{
+        font-size: 12px;
+    }
+}
+
+/* All Mobile Sizes (devices and browser) */
+@media only screen and (max-width: 767px) {
+    p{
+        font-size: 14px;
+    }
+}
+
+/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+    p{
+        font-size: 9px;
+    }
+}
+
+/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
+@media only screen and (max-width: 479px) {
+    p{
+        font-size: 7px;
+    }
+}
+
